--- a/src/sass/components/common/_gnav.scss
+++ b/src/sass/components/common/_gnav.scss
@@ -1,5 +1,115 @@
 // グローバルナビゲーション
 
 
-// 変数、ミックスイン、関数
-@use "../../global" as g;
+// 変数・ミックスイン・関数
+@use "../../global/" as g;
+
+
+
+// 開閉ボタン
+.gNavBtn {
+  all: unset;
+  z-index: 3;
+  outline: revert;
+  width: max(46px, g.$size1);
+  aspect-ratio: 1 / 1;
+  color: g.$mainColor;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+  display: grid;
+  align-items: center;
+
+  .is-gNavOpen & {
+    color: g.$whiteColor;
+  }
+
+  &__bar,
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+    grid-area: 1 / 1;
+    transition: transform .5s;
+  }
+
+  &__bar {
+
+    // グローバルナビゲーション・オープン
+    .is-gNavOpen & {
+      transform: scale(0);
+    }
+  }
+
+  &::before {
+    transform: translateY(-12px);
+
+    // グローバルナビゲーション・オープン
+    .is-gNavOpen & {
+      transform: translateY(0) rotate(45deg);
+    }
+  }
+
+  &::after {
+    transform: translateY(12px);
+
+  // グローバルナビゲーション・オープン
+    .is-gNavOpen & {
+      transform: translateY(0) rotate(-45deg);
+    }
+  }
+}
+
+
+
+// メニュー
+.gNav {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    0.96deg,
+    rgba(84, 96, 63, 0.9) 0.35%,
+    rgba(162, 207, 79, 0.9) 182.75%
+  );
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 44px;
+  transition: transform .5s;
+
+
+  // グローバルナビゲーション・オープン
+  .is-gNavOpen & {
+    transform: translateX(-100%);
+  }
+
+  &__logo {
+    --min-size: 120;
+    --max-size: 200;
+    width: var(--clamp-size);
+  }
+
+  &__list {
+    --min-size: 14;
+    --max-size: 18;
+    font-size: var(--clamp-size);
+    display: flex;
+    column-gap: 2em;
+    color: g.$whiteColor;
+  }
+}
+
+
+// ページがスクロールするのを防ぐ。
+.is-gNavOpen body {
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+}
