--- a/src/sass/components/parts/_headings.scss
+++ b/src/sass/components/parts/_headings.scss
@@ -3,3 +3,14 @@
 
 // 変数、ミックスイン、関数
 @use "../../global" as g;
+
+
+
+.primaryHeading {
+  --min-size: 26;
+  --max-size: 42;
+  font-family: 'Noto Serif JP', serif;
+  font-size: var(--clamp-size);
+  font-weight: 500;
+  line-height: 1.5;
+}
