--- a/src/sass/components/parts/_links.scss
+++ b/src/sass/components/parts/_links.scss
@@ -3,3 +3,15 @@
 
 // 変数、ミックスイン、関数
 @use "../../global" as g;
+
+
+
+// More
+.moreLink {
+  font-family: 'Lora', serif;
+
+  &::after {
+    content: url(/images/common/more.svg);
+    margin-inline-start: 1.5em;
+  }
+}
