--- a/src/sass/utilities/_utilities.scss
+++ b/src/sass/utilities/_utilities.scss
@@ -3,3 +3,17 @@
 
 // 変数、ミックスイン、関数
 @use "../global/" as g;
+
+
+
+// スクリーンリーダーのみ
+.u-sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  border: 0;
+  margin: -1px;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
