--- a/src/sass/components/other/cta/_top-cta.scss
+++ b/src/sass/components/other/cta/_top-cta.scss
@@ -10,7 +10,7 @@
   background-color: g.$whiteColor;
   padding-block: 200px;
   display: flex;
-  color: green;
+  color: blue;
   flex-direction: column;
   row-gap: 30px;
   align-items: center;
